--- a/launch.htm
+++ b/launch.htm
@@ -14,7 +14,7 @@
 
   <script>
     // Redirect as soon as possible
-    window.location.replace("https://example.com");
+   // window.location.replace("https://example.com");
   </script>
 </head>
 <body>
