--- a/index.html
+++ b/index.html
@@ -1,7 +1,18 @@
-<link rel="manifest" href="manifest.webmanifest">
-<meta name="theme-color" content="#317EFB">
-<script>
-  if ('serviceWorker' in navigator) {
-    navigator.serviceWorker.register('service-worker.js');
-  }
-</script>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="manifest" href="manifest.webmanifest">
+  <meta name="theme-color" content="#317EFB">
+  <title>My PWA</title>
+  <script>
+    if ('serviceWorker' in navigator) {
+      navigator.serviceWorker.register('service-worker.js');
+    }
+  </script>
+</head>
+<body>
+  <h1>Hello, world!</h1>
+</body>
+</html>
