--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta http-equiv="refresh" content="0; url=https://polarsteps.com/MikeRazzetti">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="manifest" href="manifest.webmanifest">
   <meta name="theme-color" content="#317EFB">
-  <title>My PWA</title>
+  <title>Redirecting...</title>
   <script>
     if ('serviceWorker' in navigator) {
       navigator.serviceWorker.register('service-worker.js');
@@ -13,6 +14,5 @@
   </script>
 </head>
 <body>
-  <h1>Hello, world!</h1>
 </body>
 </html>
