--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-<link rel="icon" href="icon-192.png" type="image/png">
 <head>
   <meta charset="UTF-8">
-  <meta http-equiv="refresh" content="0; url=https://polarsteps.com/MikeRazzetti">
+  <meta http-equiv="refresh" content="30; url=https://example.com">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="manifest" href="manifest.webmanifest">
   <meta name="theme-color" content="#317EFB">
-  <title>Redirecting...</title>
+  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'; connect-src 'self'; object-src 'none';">
+  <title>Redirecting in 30 seconds...</title>
   <script>
     if ('serviceWorker' in navigator) {
-      navigator.serviceWorker.register('service-worker.js');
+      navigator.serviceWorker.register('service-worker.js', { scope: './' });
     }
   </script>
 </head>
