--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+  <link rel="icon" href="icons/icon-192.png" type="image/png">
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="refresh" content="30; url=https://example.com">
